<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ma.loginscreen.LoginActivity">


    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="18sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginTituloText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />





    <android.support.design.widget.TextInputLayout




        style="@style/loginEditText"
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/logininputNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LoginNombreHint"
            />

    </android.support.design.widget.TextInputLayout>





    <android.support.design.widget.TextInputLayout

        style="@style/loginEditText"

        android:id="@+id/inputpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/inputpasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LoginPasswordHint"
            />



    </android.support.design.widget.TextInputLayout>




    <Button
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/activityLogin_btn_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginBotonAceptar"
        />




    <Button

        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/activitityLogin_btn_Registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginBotonRegistrarse"


        />


    <Button
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/ActivityLogingBTN_Invitado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginBotonInvitado"

        />




</LinearLayout>
